# meeting-pi-display

./: app.py  meetingdisplay.kv  pyproject.toml
scripts/: raspbian_install.zsh
