[tool.poetry]
name = "meeting-pi-display"
version = "0.1.0"
description = ""
authors = ["Bob Saska <git@r35.net>"]

[tool.poetry.dependencies]
python = "^3.6"
pygame = "^1.9.6"
pillow = "^7.1.1"
psutil = "^5.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
